# pwnotify

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKERHUB.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  VERSIONS.md  docker-compose-prod.yml  docker-compose.yml  example.env
backend/: alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py  script.py.mako
backend/alembic/versions/: 26d72474e40d_app_user_token_generation.py  306566b09ed2_revoke_provider_table_grants.py  38535d051a81_heal_homeless_sso_accounts.py  4035552093e2_tenant_is_default_and_local_account_home.py  5d152bfe7585_email_grant_source_user_token_groups.py  798b22bf8252_assignment_group_role.py  8573de47a2a1_assignment_group_member_snapshot_last_.py  a1b2c3d4e5f6_add_is_shared.py  a2b3c4d5e6f7_add_tenant_and_auditor_map.py  a8b9c0d1e2f3_session_active_tenant.py  a9c0d1e2f3a4_assignment_group_role_check.py  b1c2d3e4f5a6_revoke_owner_only_sequence_usage.py  b2c3d4e5f6a7_add_appuser_sso.py  b3c4d5e6f7a8_tenant_id_on_data_tables.py  c2d3e4f5a6b7_add_runtime_login_role.py  c3d4e5f6a7b8_add_appuser_language.py  c4d5e6f7a8b9_rls_and_app_role.py  c92a9a84bc1e_initial_schema.py  cd755854e58c_admin_tenant_and_superadmin.py  d4e5f6a7b8c9_add_2fa.py  d5e6f7a8b9c0_drop_tenant_id_server_default.py  e5f6a7b8c9d0_add_audit_log.py  e6f7a8b9c0d1_scope_entra_id_unique.py  f6a7b8c9d0e1_add_totp_last_step.py  f7a8b9c0d1e2_narrow_app_role_grants.py  f8a9b0c1d2e3_revoke_default_privileges_app_role.py
backend/app/: __init__.py  entrypoint.py  main.py  seed.py
backend/app/api/: deps.py
backend/app/core/: body_limit.py  config.py  crypto.py  errors.py  http.py  imagetype.py  logging.py  redaction.py  security.py  security_headers.py  twofa.py
backend/app/db/: migrate.py  rls.py  session.py  tenant_context.py
backend/app/models/: __init__.py  _base.py  assignment_group.py  assignment_group_member.py  audit.py  entra.py  notification.py  run.py  setting.py  tenant.py  token.py  user.py
backend/app/repositories/: assignment_group_member_repo.py  assignment_group_repo.py  audit_repo.py  entra_repo.py  exclusion_repo.py  notification_repo.py  run_repo.py  tenant_repo.py  user_repo.py  user_token_repo.py
backend/app/schemas/: assignment.py  assignment_group.py  audit.py  auth.py  common.py  entities.py  instance.py  settings.py  tenant.py
backend/app/services/: alerts.py  audit.py  connectivity.py  default_templates.py  entra_avatar.py  expiry.py  (+14 more)
backend/tests/: conftest.py  test_2fa_disable_reauth.py  test_2fa_enable_replay.py  test_2fa_reenroll_guard.py  test_500_security_headers.py  test_access_token_revocation.py  test_active_tenant_resolution.py  test_admin_assignments.py  test_admin_groups.py  test_admin_groups_sync.py  test_admin_instance.py  test_admin_tenants.py  test_admin_user_avatar.py  test_admin_users_scoping.py  test_app_role_grants.py  test_assignment_bulk_cross_grant_lock.py  test_assignment_cross_grant_lock.py  test_assignment_input_limits.py  test_audit_coverage.py  test_audit_purge_floor.py  test_audit_retention_guard.py  test_audit_tenant_attribution.py  test_audit_tenant_scope.py  test_auth_ratelimit.py  test_authz_small_fixes.py  test_background_runtime_isolation.py  test_body_size_limit.py  test_branding_cross_tenant_isolation.py  test_branding_path_traversal.py  test_branding_tenant_scope.py  test_branding_write_scope.py  test_bulk_mass_send_guard.py  test_change_password_reauth.py  test_console_groups_adversarial.py  test_context_gating_adversarial.py  test_create_local_home.py  test_db_smoke.py  test_delete_user_atomicity.py  test_deps_guards.py  test_docs_toggle.py  (+103 more)
(+149 files in other folders)
