[project]
name = "pwnotify"
version = "0.3.6"
description = "Password Expiry Notification Tool für Microsoft Entra ID (Azure AD)."
readme = "../README.md"
requires-python = ">=3.14,<3.15"
license = { text = "MIT" }
authors = [{ name = "Pascal Amsler", email = "pascal.amsler@amslertec.ch" }]

# Exakt gepinnt (kein ^/~). Geprüft 2026-07-13. Siehe ../VERSIONS.md.
dependencies = [
  "fastapi==0.139.0",
  "uvicorn[standard]==0.51.0",
  "sqlmodel==0.0.39",
  "sqlalchemy==2.0.51",
  "alembic==1.18.5",
  "asyncpg==0.31.0",
  "greenlet==3.5.3",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "apscheduler==3.11.3",
  "httpx==0.28.1",
  "msal==1.37.0",
  "cryptography==49.0.0",
  "argon2-cffi==25.1.0",
  "pyjwt==2.13.0",
  "jinja2==3.1.6",
  "structlog==26.1.0",
  "tenacity==9.1.4",
  "slowapi==0.1.10",
  "orjson==3.11.9",
  "openpyxl==3.1.5",
  "python-multipart==0.0.32",
  "email-validator==2.3.0",
  # Zeitzonen-DB (Chainguard/distroless enthalten keine System-tzdata) -> zoneinfo-Fallback
  "tzdata==2026.3",
  # Auto-Trimmen hochgeladener Logos (transparente Ränder entfernen)
  "pillow==12.3.0",
  # 2FA (TOTP) für lokale Konten + QR-Code-Erzeugung (nutzt Pillow)
  "pyotp==2.10.0",
  "qrcode==8.2",
  # Gehärteter XML-Parser für die SVG-Upload-Allowlist (DTD/Entities/externe Refs aus)
  "defusedxml==0.7.1",
]

[dependency-groups]
dev = [
  "ruff==0.15.21",
  "mypy==2.3.0",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "respx==0.23.1",
  "pytest-randomly==4.0.1",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "ASYNC", "RUF"]
ignore = ["B008"]  # FastAPI Depends() in Defaults ist idiomatisch

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["E501", "F401"]
"tests/*" = ["N802", "RUF012"]
# Content-Datei mit langen HTML-Zeilen und typografischem En-Dash:
"app/services/default_templates.py" = ["E501", "RUF001"]
# Lokaler FS-Zugriff (schnell) in async Routen ist hier bewusst ok:
"app/api/routes/branding.py" = ["ASYNC240"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = true
exclude = ["alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # slowapi 0.1.10 still calls the stdlib's deprecated `asyncio.iscoroutinefunction`
    # (removal planned for 3.16) instead of `inspect.iscoroutinefunction`. Third-party
    # code we don't control -- narrowly matched by module + message, not a blanket
    # DeprecationWarning ignore, so a real deprecation elsewhere would still surface.
    "ignore:'asyncio.iscoroutinefunction' is deprecated.*:DeprecationWarning:slowapi.extension",
]

[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_dynamic_aliases = true

# SQLModel annotiert Modell-Attribute mit ihren Python-Typen (nicht als SQLAlchemy-
# Column-Expressions). In der Query-bauenden Datenzugriffs-Schicht erzeugt das unter
# mypy --strict bekannte Falsch-Positive (z.B. `Column | None` hat kein `.is_not()`).
# Diese Codes werden NUR dort deaktiviert; der Rest der App bleibt strict.
[[tool.mypy.overrides]]
module = ["app.repositories.*", "app.services.settings_service"]
disable_error_code = [
  "union-attr",
  "arg-type",
  "attr-defined",
  "operator",
  "call-overload",
  "index",
  "list-item",
]
